syntax = "proto3";

package vmapi;

option go_package = "github.com/benschlueter/delegatio/core/vmapi/vmproto";


service API {
  rpc ExecCommandStream(ExecCommandStreamRequest) returns (stream ExecCommandStreamResponse);
  rpc ExecCommand(ExecCommandRequest) returns (ExecCommandResponse);
  rpc WriteFile(WriteFileRequest) returns (WriteFileResponse);
  rpc ReadFile(ReadFileRequest) returns (ReadFileResponse);
}

message ExecCommandStreamRequest {
  string command = 1;
  repeated string args = 2;
}

message ExecCommandStreamResponse {
  oneof content {
    bytes output = 1;
    Log log = 2;
  }
}

message ExecCommandRequest {
  string command = 1;
  repeated string args = 2;
}

message ExecCommandResponse {
  bytes output = 1;
}

message WriteFileRequest {
  string filepath = 1;
  string filename = 2;
  bytes content = 3;
}

message WriteFileResponse {
}

message ReadFileRequest {
  string filepath = 1;
  string filename = 2;

}

message ReadFileResponse {
  bytes content = 3;
}



message Log {
  string message = 1;
}