syntax = "proto3";

package gradeapi;

option go_package = "github.com/benschlueter/delegatio/grader/gradeAPI/gradeproto";


service API {
  rpc RequestGrading(RequestGradingRequest) returns (RequestGradingResponse);
}

message RequestGradingRequest {
    int32 exerciseId = 1;
    string studentId = 2;
    bytes solution = 3;
    bytes signature = 4;
    bool submit = 5;
}

message RequestGradingResponse {
    int32 points = 1;
    bytes log = 2;
}
